z-index issue fixed.
The CSS transition menu elements had a z-index conflict.
Today I learned you can transition Z-index too!

--- a/css/custom.css
+++ b/css/custom.css
@@ -81,82 +81,7 @@ footer p {
 	text-align: center;
 	font-size: .8em;
 }
-/*#drop1.f-dropdown.content.open {
-	background: #9ed900;
-	background-size: 100%;
-	position: absolute;
-    left: 39px !important;
-    top: 59px !important;
-    max-width: none;
-    width: 275%;
-    height: 80%;
-    border:none;
-}
-#drop1.f-dropdown.content.open::before{
-	content: "";
-	display: block;
-	width: 0;
-	height: 0;
-	border: 40px;
-	border-left: 60px solid transparent;
-	border-right: 60px solid transparent;
-	border-top: 30px  solid #5b7d00;
-	position: absolute;
-	top: -1px;
-	left: 58px;
-}
-
-#drop2.f-dropdown.content.open{
-	background: #0c7ff4;
-	background-size: 100%;
-	position: absolute;
-	left: -21em !important;
-	top: 59px !important;
-	max-width: none;
-    width: 276%;
-    height: 80%;
-    border:none;
-}
-#drop2.f-dropdown.content.open::before{
-	content: "";
-	display: block;
-	width: 0;
-	height: 0;
-	border: 40px;
-	border-left: 60px solid transparent;
-	border-right: 60px solid transparent;
-	border-top: 30px  solid #0757a9;
-	position: absolute;
-	top: -1px;
-	left: 395px;
-}
-#drop3.f-dropdown.content.open{
-	background: #fca600;
-	background-size: 100%;
-	position: absolute;
-	left: -44.9em !important;
-	top: 59px !important;
-	max-width: none;
-    width: 276%;
-    height: 80%;
-    border:none;
-}
-#drop3.f-dropdown.content.open::before{
-	content: "";
-	display: block;
-	width: 0;
-	height: 0;
-	border: 40px;
-	border-left: 60px solid transparent;
-	border-right: 60px solid transparent;
-	border-top: 30px  solid #e08504;
-	position: absolute;
-	top: -1px;
-	left: 735px;
-}
-.f-dropdown::after{
-	content: none;
-}*/
+/*homepage Menu transitions*/
 #specialEd {
 	position: absolute;
 	top: 0em;
@@ -164,17 +89,73 @@ footer p {
 	width: 250px;
 	height: 310px;
 	background: transparent;
-	-webkit-transition: width 1s, height 1s, background 1s;
-	-moz-transition: width 1s, height 1s, background 1s;
-	-0-transition: width 1s, height 1s, background 1s;
-	transition: width 1s, height 1s, background 1s;
-	z-index: 1;
+	-webkit-transition: width 1s, height 1s, background 1s, z-index .1s, top 1s;
+	   /*-moz-transition: width 1s, height 1s, background 1s, z-index .1s, top 1s;*/
+	     -0-transition: width 1s, height 1s, background 1s, z-index .1s, top 1s;
+			transition: width 1s, height 1s, background 1s, z-index .1s, top 1s;
+	z-index: 10;
 }
 #specialEd:hover {
 	width: 918px;
 	height: 390px;
 	background: #9ed900;
+	z-index: 20;
+	top:3.8em;
 
+}
+#specialEd span{
+	visibility:hidden;
+	opacity:0;
+	transition:visibility 0s linear .5s,opacity 0.5s linear;
+}
+#specialEd:hover span{
+	visibility:visible;
+	opacity:1;
+	transition-delay:0s;
 }
 
 
+#reading {
+	position: absolute;
+	top: 0em;
+	left: 2.45em;
+	width: 250px;
+	height: 310px;
+	background: transparent;
+	-webkit-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	   -moz-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	     -0-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	        transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	z-index: 10;
+}
+#reading:hover {
+	width: 918px;
+	height: 390px;
+	background: #0c7ff4;
+	left: -18.45em;
+	z-index: 20;
+	top:3.8em;
+}
+
+#frameworks {
+	position: absolute;
+	top: 0em;
+	left: 2.45em;
+	width: 250px;
+	height: 310px;
+	background: transparent;
+	-webkit-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	   -moz-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	     -0-transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+			transition: width 1s, height 1s, background 1s, left 1s, z-index .1s, top 1s;
+	z-index: 10;
+}
+#frameworks:hover {
+	width: 918px;
+	height: 390px;
+	background: #fca600;
+	left: -39.2em;
+	z-index: 20;
+	top:3.8em;
+
+}
